objects/ssot__CheckTender__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Check Tender Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentMethodId__c</fullName>
        <label>Payment Method</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761212933_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CheckTender_PaymentMethodId_map_Paym_rel</label>
        <referenceTo>ssot__PaymentMethod__dlm</referenceTo>
        <relationshipLabel>CheckTender_PaymentMethodId_map_Paym_rel</relationshipLabel>
        <relationshipName>rel_1697761212933_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>